--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"@adbayb/eslint-config": "1.3.0",
 		"@adbayb/prettier-config": "1.2.0",
 		"@adbayb/stack": "1.9.0",
-		"@adbayb/ts-config": "1.0.0"
+		"@adbayb/ts-config": "1.0.0",
+		"process": "^0.11.10"
 	}
 }
