--- a/examples/solid/tsconfig.json
+++ b/examples/solid/tsconfig.json
@@ -1,6 +1,7 @@
 {
 	"extends": "../../tsconfig.json",
 	"include": ["src"],
+	"exclude": ["node_modules", "dist"],
 	"compilerOptions": {
 		"jsx": "preserve",
 		"jsxImportSource": "solid-js",
