--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "@hexagonal-ui/solid",
-	"description": "Hexagonal UI Solid adapter",
+	"name": "@hexagonal-ui/vue",
+	"description": "Hexagonal UI Vue adapter",
 	"version": "0.0.0",
 	"publishConfig": {
 		"access": "public"
@@ -38,14 +38,14 @@
 		"check": "tsc --noEmit"
 	},
 	"peerDependencies": {
-		"solid-js": "^1.0.0"
+		"vue": "^3.0.0"
 	},
 	"dependencies": {
 		"@hexagonal-ui/core": "workspace:^"
 	},
 	"devDependencies": {
 		"quickbundle": "1.2.0",
-		"solid-js": "1.7.11",
+		"vue": "3.3.4",
 		"vitest": "0.34.3"
 	}
 }
