--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -34,8 +34,7 @@
 		"start": "pnpm watch",
 		"build": "quickbundle build",
 		"watch": "quickbundle watch",
-		"test": "vitest",
-		"check": "tsc --noEmit"
+		"test": "vitest"
 	},
 	"devDependencies": {
 		"quickbundle": "1.2.0",
