--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -34,8 +34,7 @@
 		"start": "pnpm watch",
 		"build": "quickbundle build",
 		"watch": "quickbundle watch",
-		"test": "vitest",
-		"check": "tsc --noEmit"
+		"test": "vitest"
 	},
 	"peerDependencies": {
 		"react": "^17.0.0 || ^18.0.0"
